--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^3.1.0",
-    "react": "^17.0.0-rc.2",
-    "react-dom": "^17.0.0-rc.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "3.4.3",
     "tachyons": "^4.12.0"
   },
